--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,7 +40,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand " href="index.html">
             <span>
-              Insurance-Me
+              Insurance to Me
             </span>
           </a>
 
